# copyicons

./: .gitignore  README.md
source/include/copyicons/: CMakeLists.txt  copyicons.c  copyicons.h  file.h  pfs.h
src/: main.h
